# Meeting_Tool

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  pyproject.toml
.streamlit/: config.toml
src/meeting_helper_v2/: crew.py  main.py
src/meeting_helper_v2/config/: agents.yaml  tasks.yaml
